Corrected Method generation